--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "Godzilla",
+  "name": "erensibot",
   "version": "4.0.0",
-  "description": "Godzilla V14 Formlu Başvuru Bot Altyapısı!",
+  "description": "ErensiBOT Altyapısıdır Pardon ÇöpBOT :D",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "Ly3ssia",
+  "author": "muratxq",
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^1.0.0",
+    "@discordjs/voice": "^0.11.0",
+    "axios": "^0.27.2",
+    "common-tags": "^1.8.2",
     "croxydb": "^0.0.7",
-    "discord-gamecord": "^2.0.0",
-    "discord-modals": "^1.3.9",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.0.1",
+    "express": "^4.18.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.0.2",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "jimp": "^0.16.1",
+    "math-expression-evaluator": "^1.4.0",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "node-fetch": "^3.2.10",
-    "quick.db": "^9.0.6",
-    "request": "^2.88.2"
+    "os": "^0.1.2",
+    "request": "^2.88.2",
+    "twemoji-parser": "^14.0.0",
+    "useful-tools": "^0.2.6"
   },
   "engines": {
     "node": "16.x"
